--- a/scratch/home copy.html
+++ b/scratch/home copy.html
@@ -16,32 +16,32 @@
     <!-- Full-width images with number text -->
     <div class="mySlides">
       <div class="numbertext">1 / 6</div>
-        <img src="01.jpg" style="width:100%">
+        <img src="C:\Users\Black_thunder\Documents\GitHub\web_stack1\Assignments\assign_2\cosmix\images\Features\01.jpg" style="width:100%">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">2 / 6</div>
-        <img src="02.jpg" style="width:100%">
+        <img src="C:\Users\Black_thunder\Documents\GitHub\web_stack1\Assignments\assign_2\cosmix\images\Features\02.jpg" style="width:100%">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">3 / 6</div>
-        <img src="03.jpg" style="width:100%">
+        <img src="C:\Users\Black_thunder\Documents\GitHub\web_stack1\Assignments\assign_2\cosmix\images\Features\03.jpg" style="width:100%">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">4 / 6</div>
-        <img src="04.jpg" style="width:100%">
+        <img src="C:\Users\Black_thunder\Documents\GitHub\web_stack1\Assignments\assign_2\cosmix\images\Features\04.jpg" style="width:100%">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">5 / 6</div>
-        <img src="05.jpg" style="width:100%">
+        <img src="C:\Users\Black_thunder\Documents\GitHub\web_stack1\Assignments\assign_2\cosmix\images\Features\05.jpg" style="width:100%">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">6 / 6</div>
-        <img src="02.jpg" style="width:100%">
+        <img src="C:\Users\Black_thunder\Documents\GitHub\web_stack1\Assignments\assign_2\cosmix\images\Features\02.jpg" style="width:100%">
     </div>
   
     <!-- Next and previous buttons -->
