--- a/Assignments/assign_2_16-12-2021/assignmet_3/index.html
+++ b/Assignments/assign_2_16-12-2021/assignmet_3/index.html
@@ -28,6 +28,15 @@ Prima facie -The Responsible consultancy
 <link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
 <link rel="stylesheet" type="text/css" href="css/owl.theme.css">
 <link rel="stylesheet" type="text/css" href="css/owl.transitions.css">
+<script  type="text/javascript">
+  window.onload=function(){
+    document.getElementById("my_audio").play();}
+</script>
+<script type="text/javascript">
+  window.onload=function(){
+  document.getElementById("my_audio").play();
+  }
+  </script>
 <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -52,30 +61,8 @@ Prima facie -The Responsible consultancy
           <a class="navbar-brand" href="#menu">
           </a> </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <!--
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a class="scroll" href="#menu">Home</a></li>
-            <li><a class="scroll" href="#about">About</a></li>
-                <li><a href="#"><i class="fa fa-caret-down"></i>Dropdown</a></li>
-                <div class="sub-menu-1">
-                  <ul>
-                    <li><a href="#">Link 1</a></li>
-                      <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                </ul>
-                </div> 
-            <li><a class="scroll" href="#Law service">Law Service</a></li>
-            <li><a class="scroll" href="#Forum">Forum</a></li>
-            <li><a class="scroll" href="#E-learnings">E-learnings</a></li>
-            <li><a class="scroll" href="#team">Our Team</a></li>
-            <li><a class="scroll" href="#blog">Blog</a></li>
-            <li><a class="scroll" href="#contact">Contact Us</a></li>
-            <li><a class="scroll" href="#citations">Citations</a></li>
-
-            
-          </ul>
-        </div>-->
+        <audio src="audio/welcome.mp3" id="my_audio"></audio>
+        
         <div id="container">
           <nav>
               <ul>
@@ -384,6 +371,13 @@ Prima facie -The Responsible consultancy
  </div>
   </div>
 </section>
+<div class="video_promo">
+  <video controls autoplay loop>
+    <source src="video/videoplayback.mp4" type="video/mp4">
+    <source src="video/videoplayback.ogg" type="video/ogg">
+    Your browser does not support the video tag.
+  </video>
+</div>
 <section id="portfolio">
   <div class="container">
     <div class="col-md-8 col-md-offset-2">
